base/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pygeoapi
  namespace: pygeoapi-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Robots-Tag "noindex, nofollow" always;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8.byteroad.net
      secretName: pygeoapi-tls-secret
  rules:
    - host: k8.byteroad.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pygeoapi
                port:
                  name: http
