base/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pygeoapi
  namespace: pygeoapi-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tests.byteroad.net
      secretName: pygeoapi-tls-secret
  rules:
    - host: tests.byteroad.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pygeoapi
                port:
                  name: http
