base/ingress.yaml
---
# A Kubernetes ingress definition, which forwards all incoming HTTP traffic to
# the pygeoapi pods.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pygeoapi
  namespace: pygeoapi-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Robots-Tag "noindex, nofollow" always;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pygeoapi
                port:
                  name: http
